Fix broken overflow and broken card when given information

--- a/src/components/Global/Card/Card.module.scss
+++ b/src/components/Global/Card/Card.module.scss
@@ -16,10 +16,8 @@
   border: 0.15rem solid $black;
   width: 28rem;
   padding: 1.5rem 1.25rem;
-  margin: 1.25rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 
   .cardHeader {
     display: flex;
@@ -55,6 +53,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
+    margin-top: auto;
 
     & > * {
       margin-right: 1rem;
